--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a href="https://xawai.github.io/lksfdngla/">上一頁</a>
     <title>作業五</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
